[14/06/2026] FEAT: TEST